--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
     <app-root></app-root>
     <app-root></app-root>
     <app-root></app-root>
+    <app-root></app-root>
+    <app-root></app-root>
   </body>
 </html>
